Spelling fixes all over the place

--- a/localisation/KR_Spain_l_english.yml
+++ b/localisation/KR_Spain_l_english.yml
@@ -20,7 +20,7 @@ against_cntfai_2:0 "Against the CNT-FAI"
 against_carlist_2:0 "Against the Carlists"
 against_us_civil_war_2:0 "Opposes Our Side"
 aided_cntfai:0 "Provided aid to the CNT-FAI"
-aided_carlist:0 "Provied aid to the Carlists"
+aided_carlist:0 "Provided aid to the Carlists"
 aided_spain:0 "Provided aid to the Spanish government"
 aided_us_civwar:0 "Provided aid to our side"
 
@@ -30,7 +30,7 @@ SPR_arrest_javier:0 "An attempt will be made to arrest §YDuke Javier§! and his
 SPR_encourage_javier:0 "§YDuke Javier§! will be praised and encouraged\n"
 SPR_ban_cntfai:0 "§YCNT-FAI§! will be banned from [SPR.GetNameDef]\n"
 SPR_arrest_cntfai:0 "An attempt will be made to arrest the leaders of the §YCNT-FAI§!\n"
-SPR_force_cntfai:0 "Use force to disperse §YCNT-FAI§! supporters and keep them from organizing\n"
+SPR_force_cntfai:0 "Use force to disperse §YCNT-FAI§! supporters and keep them from organising\n"
 SPR_allow_cntfai:0 "§YCNT-FAI§! will be allowed to operate within [SPR.GetNameDef]\n"
 SPR_free_elections:0 "Elections will soon be held, open to any party\n"
 SPR_rig_elections:0 "Elections will soon be held, disallowing Carlists or CNT-FAI\n"
@@ -88,7 +88,7 @@ SPR_national_populist_party_long:0 "Juntas de Ofensiva Nacional-Sindicalista"
 ### Domestic ###
 
 sprd.1.t: "The Kingdom of Spain"
-sprd.1.d:0 "The Kingdom of Spain: Once the greatest of the Colonial Empires, she saw all of her remaining overseas colonies lost after a swift war against the USA in 1898. After this, seperatist movements in both the Basque country and Catalonia arose, and both the Church and a radical worker's movement, the CNT, are interfering in her internal politics. Spain's populace has become deeply divided. \n\nAfter taking his place on the throne in 1902, King Alfonso XIII seemed keen on regaining Spain's former status as a colonial power by intervening in Morocco. The intervention lasted for a whole decade, and the outcome, while a victory, was not exactly in favour for Spain: Her Moroccan possessions remain a source of permanent unrest. Spain turned in on herself afterwards, remaining neutral during the Weltkrieg, all while the populace's faith in King Alfonso faded. \n\nAs a result of the General Elections of 1931, the Second Spanish Republic was proclaimed, and Alfonso, accepting the will of his people, went into exile. However, the Republic lasted only a short while. The Kingdom was restored by a coup d'état lead by General Sanjurjo just a year later. Still, the memories of the short-lived failure that was the Spanish Republic fuel the regime's opponents left and right. \n\nTo date, there remain deep divisions within Spanish society. On the one hand, the resurgent Carlist Movement, headed by Alfonso Carlos, aims to re-establish the 'True Dynasty' and recreate an integralist Christian monarchy, and on the other, the anarcho-syndicalist CNT-FAI seeks the abolition of the Spanish state altogether, and to replace it with a voluntarist federation of communes and economic collectives. If the political split is not mended, Spain might even see a Civil War."
+sprd.1.d:0 "The Kingdom of Spain: Once the greatest of the Colonial Empires, she saw all of her remaining overseas colonies lost after a swift war against the USA in 1898. After this, separatist movements in both the Basque country and Catalonia arose, and both the Church and a radical worker's movement, the CNT, are interfering in her internal politics. Spain's populace has become deeply divided. \n\nAfter taking his place on the throne in 1902, King Alfonso XIII seemed keen on regaining Spain's former status as a colonial power by intervening in Morocco. The intervention lasted for a whole decade, and the outcome, while a victory, was not exactly in favour for Spain: Her Moroccan possessions remain a source of permanent unrest. Spain turned in on herself afterwards, remaining neutral during the Weltkrieg, all while the populace's faith in King Alfonso faded. \n\nAs a result of the General Elections of 1931, the Second Spanish Republic was proclaimed, and Alfonso, accepting the will of his people, went into exile. However, the Republic lasted only a short while. The Kingdom was restored by a coup d'état lead by General Sanjurjo just a year later. Still, the memories of the short-lived failure that was the Spanish Republic fuel the regime's opponents left and right. \n\nTo date, there remain deep divisions within Spanish society. On the one hand, the resurgent Carlist Movement, headed by Alfonso Carlos, aims to re-establish the 'True Dynasty' and recreate an integralist Christian monarchy, and on the other, the anarcho-syndicalist CNT-FAI seeks the abolition of the Spanish state altogether, and to replace it with a voluntarist federation of communes and economic collectives. If the political split is not mended, Spain might even see a Civil War."
 sprd.1.a: "Let us prevail."
 
 sprd.2.t:0 "Black Monday hits Spain"
@@ -156,7 +156,7 @@ sprd.14.d:0 "CNT-FAI supporters have taken to the streets to protest our governm
 sprd.14.a:0 "Disperse them"
 
 sprd.15.t:0 "CNT-FAI launch nationwide protests"
-sprd.15.d:0 "In response to our banning of their effort to organize the unemployed the CNT have launched a national protest campaign."
+sprd.15.d:0 "In response to our banning of their effort to organise the unemployed the CNT have launched a national protest campaign."
 sprd.15.a:0 "Send out the police!"
 sprd.15.b:0 "Allow them to organise"
 
@@ -170,7 +170,7 @@ sprd.17.d:0 "Our police and military have moved to disband and arrest as many CN
 sprd.17.a:0 "This shows how weak they are!"
 
 sprd.18.t:0 "Organising the workers"
-sprd.18.d:0 "The CNT-FAI have set about organizing the laid-off workers and the unemployed. They have come up with series of projects to put these people to work on."
+sprd.18.d:0 "The CNT-FAI have set about organising the laid-off workers and the unemployed. They have come up with series of projects to put these people to work on."
 sprd.18.a:0 "Watch them carefully"
 
 sprd.19.t:0 "CNT-FAI start operations!"
@@ -200,7 +200,7 @@ sprd.23.b:0 "A CNT-FAI Victory!"
 sprd.23.c:0 "The Carlists win!"
 
 sprd.24.t:0 "Elections - cancelled"
-sprd.24.d:0 "Due to the civil war the elections have been officially canceled"
+sprd.24.d:0 "Due to the civil war the elections have been officially cancelled"
 sprd.24.a:0 "This is not good!"
 
 sprd.25.t:0 "Riots!"
@@ -270,13 +270,13 @@ sprf.4.a:0 "Give them what they ask!"
 sprf.4.b:0 "Refuse, but give them refuge"
 sprf.4.c:0 "Kick them out"
 
-### 5-6 are clones of 4?
+# 5-6 are clones of 4?
 
 sprf.7.t:0 "pyon"
 sprf.7.d:0 "watashi wa usagi desu."
 sprf.7.a:0 "sore wa ii desu ne."
 
-### civil war ###
+### Civil War ###
 
 sprc.1.t:0 "Carlist uprising!"
 sprc.1.d:0 "Disaster - Carlists in the armed forces have united with the remnants of the Requêtes to seize control of Northern Spain! Carlist political organisations are taking over state authorities, the rural clergy are mobilizing the masses, and the pretender has flown in to Burgos to proclaim the beginning of a Second Reconquista to reclaim Spain for a truly Catholic Dynasty!"
@@ -288,7 +288,7 @@ sprc.2.d:0 "After a century of struggle, the Legitimist Cause has again risen up
 sprc.2.a:0 "Vivo Cristo Rey!"
 
 sprc.3.t:0 "CNT uprising!"
-sprc.3.d:0 "An unprecedented week of unrest in Catalonia and Andalusia has left these regions dominated by anarchy. State power has broken down, civil Guard garrisons have been massacred, private plantations and factories have been collectivized by armed workers, and the clergy have been forcibly driven out."
+sprc.3.d:0 "An unprecedented week of unrest in Catalonia and Andalusia has left these regions dominated by anarchy. State power has broken down, civil Guard garrisons have been massacred, private plantations and factories have been collectivised by armed workers, and the clergy have been forcibly driven out."
 sprc.3.a:0 "We shall fight to stop this revolution!"
 sprc.3.b:0 "Viva la Revolución! (Play as the §YCNT-FAI§!)"
 
@@ -296,8 +296,9 @@ sprc.4.t:0 "CNT Spain rises up! ¡A las barricadas!"
 sprc.4.d:0 "Collectivize and mobilise, for Social Revolution!"
 sprc.4.a:0 "Arise, workers of Spain!"
 
-### SPR
-### volunteers
+### SPR ###
+
+### Volunteers ###
 
 sprc.101.t:0 "Civil War in Spain!"
 sprc.101.d:0 "The legitimate Spanish Kingdom under Alfonso XIII is under severe threat from anarchists and fanatics! While many are saying that this provides further proof of the terminal weakness of the House of Bourbon, a secure Spain is an important part of our defensive plans. It could be wise to help the Government put an end to these threats."
@@ -318,7 +319,7 @@ sprc.104.a:0 "Send material and technical experts"
 sprc.104.b:"Spain is of no interest to Germany."
 
 sprc.105.t:0 "German Aid Arrives!"
-sprc.105.d:0 "The German Kaiser believes that our success in the present struggle in Spain is essential for the continued stability of Europe, and has sent us considerable amounts of supplies, military 'experts,' and some motorized infantry to help us in the fight."
+sprc.105.d:0 "The German Kaiser believes that our success in the present struggle in Spain is essential for the continued stability of Europe, and has sent us considerable amounts of supplies, military 'experts,' and some motorised infantry to help us in the fight."
 sprc.105.a:0 "Okay"
 
 sprc.106.t:0 "The End of the Spanish War"
@@ -329,10 +330,11 @@ sprc.115.t:0 "The End of the Spanish War"
 sprc.115.d:0 "For good or ill, the Spanish war is now over. The General Staff have reported that they learnt many valuable lessons regarding the nature of modern warfare over the course of the conflict."
 sprc.115.a:0 "Great!"
 
-### post-war
+### Post-War ###
 
-### CNT
-### volunteers
+### CNT ###
+
+### Volunteers ###
 
 sprc.203.t:0 "The End of the Spanish War"
 sprc.203.d:0 "For good or ill, the Spanish war is now over. The General Staff have reported that they learnt many valuable lessons regarding the nature of modern warfare over the course of the conflict."
@@ -340,7 +342,7 @@ sprc.203.a:0 "Great!"
 
 sprc.204.t:0 "Anarco-Syndicalist Uprising!"
 sprc.204.d:0 "Spain is collapsing into anarchy, and the CNT-FAI is our brother in the supporting the cause of the working class! We should send aid at once!"
-sprc.204.a:0 "Publically Support the CNT-FAI"
+sprc.204.a:0 "Publicly Support the CNT-FAI"
 sprc.204.b:0 "Remain silent on Spanish affairs"
 
 sprc.205.t:0 "British Support"
@@ -353,7 +355,7 @@ sprc.206.a:0 "Great!"
 
 sprc.207.t:0 "Anarco-Syndicalist Uprising!"
 sprc.207.d:0 "Spain is collapsing into anarchy, and the CNT-FAI is our brother in the supporting the cause of the working class! We should send aid at once!"
-sprc.207.a:0 "Publically Support the CNT-FAI"
+sprc.207.a:0 "Publicly Support the CNT-FAI"
 sprc.207.b:0 "Remain silent on Spanish affairs"
 
 sprc.208.t:0 "Italian Support"
@@ -366,7 +368,7 @@ sprc.209.a:0 "Great!"
 
 sprc.210.t:0 "Anarco-Syndicalist Uprising!"
 sprc.210.d:0 "Spain is collapsing into anarchy, and the CNT-FAI is our brother in the supporting the cause of the working class! We should send aid at once!"
-sprc.210.a:0 "Publically Support the CNT-FAI"
+sprc.210.a:0 "Publicly Support the CNT-FAI"
 sprc.210.b:0 "Remain silent on Spanish affairs"
 
 sprc.211.t:0 "Soviet Support"
@@ -379,7 +381,7 @@ sprc.212.a:0 "Great!"
 
 sprc.213.t:0 "Anarco-Syndicalist Uprising!"
 sprc.213.d:0 "Spain is collapsing into anarchy, and the CNT-FAI is our brother in the supporting the cause of the working class! We should send aid at once!"
-sprc.213.a:0 "Publically Support the CNT-FAI"
+sprc.213.a:0 "Publicly Support the CNT-FAI"
 sprc.213.b:0 "Remain silent on Spanish affairs"
 
 sprc.214.t:0 "Mexican Support"
@@ -392,7 +394,7 @@ sprc.215.a:0 "Great!"
 
 sprc.216.t:0 "Anarco-Syndicalist Uprising!"
 sprc.216.d:0 "Spain is collapsing into anarchy, and the CNT-FAI is our brother in the supporting the cause of the working class! We should send aid at once!"
-sprc.216.a:0 "Publically Support the CNT-FAI"
+sprc.216.a:0 "Publicly Support the CNT-FAI"
 sprc.216.b:0 "Remain silent on Spanish affairs"
 
 sprc.217.t:0 "Brazilian Support"
@@ -403,7 +405,7 @@ sprc.218.t:0 "The End of the Spanish War"
 sprc.218.d:0 "For good or ill, the Spanish war is now over. The General Staff have reported that they learnt many valuable lessons regarding the nature of modern warfare over the course of the conflict."
 sprc.218.a:0 "Great!"
 
-### post-war
+### Post-War ###
 
 sprc.220.t:0 "Victory!"
 sprc.220.d:0 "Despite the challenges we faced, we have succeeded in uniting our nation together under a Syndicalist Government! Now that Spain is truly united, we must take our first steps into this new era with our fellow Syndicalists."
@@ -414,12 +416,13 @@ sprc.221.d:0 "Now that we have won the Civil War, our Syndicalist dream has beco
 sprc.221.a:0 "Madrid, for a unified Spain!"
 sprc.221.b:0 "Barcelona is now and forever the People's home."
 
-### Carlists
-### volunteers
+### Carlists ###
+
+### Volunteers ###
 
 sprc.301.t:0 "Carlist Uprising"
 sprc.301.d:0 "Spain is collapsing into anarchy, and the Pope has declared that Catholics should support the Carlist cause - We should send aid at once!"
-sprc.301.a:0 "Publically Support the Carlists"
+sprc.301.a:0 "Publicly Support the Carlists"
 sprc.301.b:0 "Remain silent on Spanish affairs"
 
 sprc.302.t:0 "Italy supports us"
@@ -432,7 +435,7 @@ sprc.303.a:0 "Great!"
 
 sprc.304.t:0 "Carlist Uprising"
 sprc.304.d:0 "Spain is collapsing into anarchy, and the Pope has declared that Catholics should support the Carlist cause - We should send aid at once!"
-sprc.304.a:0 "Publically Support the Carlists"
+sprc.304.a:0 "Publicly Support the Carlists"
 sprc.304.b:0 "Remain silent on Spanish affairs"
 
 sprc.305.t:0 "Portugal supports us"
@@ -445,7 +448,7 @@ sprc.306.a:0 "Great!"
 
 sprc.307.t:0 "Carlist Uprising"
 sprc.307.d:0 "Spain is collapsing into anarchy, and the Pope has declared that Catholics should support the Carlist cause - We should send aid at once!"
-sprc.307.a:0 "Publically Support the Carlists"
+sprc.307.a:0 "Publicly Support the Carlists"
 sprc.307.b:0 "Remain silent on Spanish affairs"
 
 sprc.308.t:0 "Austria supports us"
@@ -458,7 +461,7 @@ sprc.309.a:0 "Great!"
 
 sprc.310.t:0 "Carlist Uprising"
 sprc.310.d:0 "Spain is collapsing into anarchy, and the Pope has declared that Catholics should support the Carlist cause - We should send aid at once!"
-sprc.310.a:0 "Publically Support the Carlists"
+sprc.310.a:0 "Publicly Support the Carlists"
 sprc.310.b:0 "Remain silent on Spanish affairs"
 
 sprc.311.t:0 "Ireland supports us"
@@ -471,7 +474,7 @@ sprc.312.a:0 "Great!"
 
 sprc.313.t:0 "Carlist Uprising"
 sprc.313.d:0 "Spain is collapsing into anarchy, and the Pope has declared that Catholics should support the Carlist cause - We should send aid at once!"
-sprc.313.a:0 "Publically Support the Carlists"
+sprc.313.a:0 "Publicly Support the Carlists"
 sprc.313.b:0 "Remain silent on Spanish affairs"
 
 sprc.314.t:0 "National France supports us"
@@ -482,7 +485,7 @@ sprc.315.t:0 "The End of the Spanish War"
 sprc.315.d:0 "For good or ill, the Spanish war is now over. The General Staff have reported that they learnt many valuable lessons regarding the nature of modern warfare over the course of the conflict."
 sprc.315.a:0 "Great!"
 
-### post-war
+### Post-War ###
 
 sprc.320.t:0 "Victory!"
 sprc.320.d:0 "Despite the challenges we faced, we have succeeded in uniting our proud nation! Now that Spain is truly united, we must take our first steps into this new era with our fellow Catholics."
