--- a/localisation/KR_Transamur_l_english.yml
+++ b/localisation/KR_Transamur_l_english.yml
@@ -382,8 +382,8 @@ tram.97.a:0 "Destroy them!"
 tram.97.b:0 "We can only let them go..."
 
 tram.98.t:0 "Attempted coup in Transamur"
-tram.98.d:0 "News about anti-Kolchak coup in Transamur have recently reached us. The rebels tried to kill Alexandr Kolchak, our puppet-governor of Vladivostok, but all their best efforts gave nothing. The coup has been crushed by loyal guards. However, Kolchak still have many haters and political situation is very unclear. Maybe, we should order Kolckak to resign and assing new leader for Transamur?"
-tram.98.a:0 "We shall put general Wojciechowski, convinced expansionalist, but not so ambitious, as Kolchak."
+tram.98.d:0 "News about anti-Kolchak coup in Transamur have recently reached us. The rebels tried to kill Alexandr Kolchak, our puppet-governor of Vladivostok, but all their best efforts gave nothing. The coup has been crushed by loyal guards. However, Kolchak still have many haters and political situation is very unclear. Maybe, we should order Kolckak to resign and assign a new leader for Transamur?"
+tram.98.a:0 "We shall put general Wojciechowski, convinced expansionist, but not so ambitious, as Kolchak."
 tram.98.b:0 "Grigory Semyonov, the former leader of Transamur, should pacify the region."
 tram.98.c:0 "We can colonise these lands by fellow Japanese people. Appoint old general Mitsue as colonial governor."
 tram.98.e:0 "Kolchak is the best choice for us"
@@ -401,7 +401,6 @@ tram.100.a:0 "Wojciechowski is the best choice for us"
 
 tram.101.t:0 "The Japanese are trying to remove Wojciechowski!"
 tram.101.d:0 "The Japanese believe Wojciechowski has outlived his usefulness and have approached the elite of Transamur with the plan of backing a coup d'etat to replace him with someone more useful."
-
 
 ### Parties ###
 TRM_totalist_party:0 "FETP"
