--- a/localisation/KR_American_Union_State_l_english.yml
+++ b/localisation/KR_American_Union_State_l_english.yml
@@ -9,11 +9,11 @@ TEX_military_desc:0 "With the civil war upon us we need to build a new army that
 TEX_army:0 "The Patriotic American Army"
 TEX_army_desc:0 "With the civil war upon us we need a Patriotic American Army. One that will follow the true values of what it means to be an American and not the fat cats or the anarchists. "
 TEX_pattons_mobility_plan:0 "Patton's Mobility Plan"
-TEX_pattons_mobility_plan_desc:0 "Of the various plans for the military, let us support General Patton's mobility plan. This is a plan that focus heavily on tanks and mechanized infantry. "
+TEX_pattons_mobility_plan_desc:0 "Of the various plans for the military, let us support General Patton's mobility plan. This is a plan that focus heavily on tanks and mechanised infantry. "
 TEX_motorized_effort:0 "Motorised effort"
-TEX_motorized_effort_desc:0 "A key part of Patton's plan is motorized vehicles. By working closely with Henry Ford and other automotive leaders loyal to the true America, we can build the vehicles necessary to achieve victory."
+TEX_motorized_effort_desc:0 "A key part of Patton's plan is motorised vehicles. By working closely with Henry Ford and other automotive leaders loyal to the true America, we can build the vehicles necessary to achieve victory."
 TEX_infantry_tanks:0 "Infantry Tanks"
-TEX_infantry_tanks_desc:0 "For tanks to be effective they must work together with the infantry. The infantry must support our armored cavalry for victory to be achieved. Through this team work we victory will always be ours. "
+TEX_infantry_tanks_desc:0 "For tanks to be effective they must work together with the infantry. The infantry must support our armoured cavalry for victory to be achieved. Through this team work we victory will always be ours. "
 TEX_superior_fire_power:0 "Collins's combined arms plan"
 TEX_superior_fire_power_desc:0 "Joseph Lawton Collins better known as Lighting Joe has proposed that the key to victory in battle is to rely on combined arms and superior firepower. His plan holds merit, let us give him the support to achieve victory."
 TEX_praise_the_lord:0 "Praise the Lord"
@@ -25,11 +25,11 @@ TEX_conscription_law_desc:0 "The strong military tradition of the south was not 
 TEX_army_nurse_corps:0 "Create the WACs"
 TEX_army_nurse_corps_desc:0 "The Women Army Corps has been proposed. The WACs as they are being called would take over support roles for the men allowing more men to go to the front. In particular a good number of women wish to enter the Nursing Corps to help save the lives of patriotic Americans."
 TEX_army_rangers:0 "The Army Ranger corps"
-TEX_army_rangers_desc:0 "Now that we have the plans finalized for the American Army it is time that we create the army ranger corps. The Army Ranger corps will function as the elite special forces of the American Army. "
+TEX_army_rangers_desc:0 "Now that we have the plans finalised for the American Army it is time that we create the army ranger corps. The Army Ranger corps will function as the elite special forces of the American Army. "
 
 ### Foci - Navy ###
 TEX_navy:0 "Building our navy"
-TEX_navy_desc:0 "It is time that we modernize the American Navy. In the past there was the Great White Fleet launched by Theodore Roosevelt that made the world recognize and respect America's naval might. Those days are in the past, however they do not need to be. Let us rebuild the navy and make the world respect the American might again."
+TEX_navy_desc:0 "It is time that we modernise the American Navy. In the past there was the Great White Fleet launched by Theodore Roosevelt that made the world recognise and respect America's naval might. Those days are in the past, however they do not need to be. Let us rebuild the navy and make the world respect the American might again."
 TEX_battle_ships:0 "Halsey's Battleships"
 TEX_battle_ships_desc:0 "William Halsey's plan for the navy focuses on Battleships. To rule the seas we need modern battleships and battlecruisers and then victory will always be in our grasp. "
 TEX_battle_cruisers:0 "Battle Cruiser efforts"
@@ -45,13 +45,13 @@ TEX_new_aircraft_carriers_desc:0 "To make sure that the American navy remains th
 TEX_escorts:0 "Naval Escorts"
 TEX_escorts_desc:0 "Regardless of which naval plan that we choose we should make sure that our convoys are protected where ever they go. To that end let us invest in escorts for them."
 TEX_submarine_tactics:0 "Submarine Tactics"
-TEX_submarine_tactics_desc:0 "During the first world war, submarines were shown to be greatly effective. As we work on modernize the American Navy we should not neglect this advantage. So to that end let us focus on the power of Submarines."
+TEX_submarine_tactics_desc:0 "During the first world war, submarines were shown to be greatly effective. As we work on modernise the American Navy we should not neglect this advantage. So to that end let us focus on the power of Submarines."
 TEX_anti_submarine_tactics:0 "Anti-Submarine Tactics"
-TEX_anti_submarine_tactics_desc:0 "During the first world war, submarines were shown to be greatly effective. As we work on modernize the American Navy we should not neglect to be prepared for their usage. Let us focus on having our navy fight and destroy all submarines that the enemy may use."
+TEX_anti_submarine_tactics_desc:0 "During the first world war, submarines were shown to be greatly effective. As we work on modernise the American Navy we should not neglect to be prepared for their usage. Let us focus on having our navy fight and destroy all submarines that the enemy may use."
 TEX_expand_annapolis:0 "Naval Station Key West"
 TEX_expand_annapolis_desc:0 "While Annapolis may have served the corrupt regime before us, we should build a new naval base in Key West Florida. Here we will have access to the Caribbean and the Atlantic Ocean to train our navy and make sure that the American navy is the envy of the world."
 TEX_marine_corps:0 "Marine Corps"
-TEX_marine_corps_desc:0 "As we work on modernize the military forces we must not neglect the Marine Corps. As one of the most elite branches of the American Armed forces, there are still many patriotic marines whom would glady help make sure that the corps is loyal to the true republic."
+TEX_marine_corps_desc:0 "As we work on modernise the military forces we must not neglect the Marine Corps. As one of the most elite branches of the American Armed forces, there are still many patriotic marines whom would glady help make sure that the corps is loyal to the true republic."
 
 ### Foci - Air Force ###
 TEX_airforce:0 "The Patriotic American Air Force"
@@ -65,19 +65,19 @@ TEX_tatical_bombers_desc:0 "Another key part of Ramey's plan calls for tactical 
 TEX_air_supremecy:0 "Lindbergh's Air Supremacy"
 TEX_air_supremecy_desc:0 "Charles Lindbergh believes that the best use for the Air Force is to dominate the skies. Through ruling the skies we will have victory."
 TEX_fighters:0 "Fighter Efforts"
-TEX_fighters_desc:0 "To dominate the skies we need fighters and many of the highest qualities fighters that we can produce. To that end let us modernize the air force to make sure that our air force is the envy of the world."
+TEX_fighters_desc:0 "To dominate the skies we need fighters and many of the highest qualities fighters that we can produce. To that end let us modernise the air force to make sure that our air force is the envy of the world."
 TEX_strategic_bombers:0 "Strategic Bombers"
 TEX_strategic_bombers_desc:0 "To rule the skies we need to make sure that the enemy can not even take flight to begin with. To that end Lindbergh's plan calls for a focus in strategic bombers in order to achieve just that objective. "
 TEX_found_the_wasp:0 "Found the WASPs"
-TEX_found_the_wasp_desc:0 "It has been proposed that we create the Women Airforce Service Pilots or the WASPs. The organization would help in making sure that we have more men for flying and give women whom are loyal and patriotic to the True America flying experience. This is of course Controversial but we need all the support to bring victory for Ameirca."
+TEX_found_the_wasp_desc:0 "It has been proposed that we create the Women Airforce Service Pilots or the WASPs. The organisation would help in making sure that we have more men for flying and give women whom are loyal and patriotic to the True America flying experience. This is of course Controversial but we need all the support to bring victory for America."
 TEX_rocketry:0 "Patriotic Rockets"
-TEX_rocketry_desc:0 "As we modernize our Air Force many of our scientists are looking into how rocketry and jet technology can be utilized in making our aircraft even better. Let us give them support and see what they can do for America.  "
+TEX_rocketry_desc:0 "As we modernise our Air Force many of our scientists are looking into how rocketry and jet technology can be utilised in making our aircraft even better. Let us give them support and see what they can do for America.  "
 
 ### Foci - Economic ###
 TEX_war_economy:0 "Economics of War"
 TEX_war_economy_desc:0 "The civil war is upon us and in order to have victory we need not just the might of our army but the might of our economy. So let us get to work to bring victory for the True America!"
 TEX_populist_economics:0 "Populist Economics"
-TEX_populist_economics_desc:0 "Huey Long is a populist and as such his economic model favors being a populist. His economic system favors supporting the people of America over the corporations and making sure that they have relief and support to bring victory for America. "
+TEX_populist_economics_desc:0 "Huey Long is a populist and as such his economic model favours being a populist. His economic system favours supporting the people of America over the corporations and making sure that they have relief and support to bring victory for America. "
 TEX_the_might_of_agriculture:0 "The Might of Agriculture"
 TEX_the_might_of_agriculture_desc:0 "Huey Long has a great deal of support among the farmers of the country. As such he can rely on the support of the farmers to bring the might of agriculture for America giving our soldiers the food that they need."
 TEX_southern_workers:0 "Patriotic Workers"
