--- a/localisation/KR_Commune_of_France_l_english.yml
+++ b/localisation/KR_Commune_of_France_l_english.yml
@@ -244,7 +244,7 @@ FRA_wip:0 "This focus is not yet implemented. This will never unlock and will ha
 latin_american_union:0 "Latin American Union" #???
 FRA_sorelian_economy_tooltip:0 "§YYou will receive 4 infantry divisions in Paris§!\n"
 
-### Focii ###
+### Foci ###
 
 FRA_amenagement:0 "Aménagement du Territoire"
 FRA_amenagement_desc:0 "Our territory is vast and unequally developed, some rural regions having been left behind while others prosper and grow at spectacular rates. We must encourage local initiatives and consider ambitious infrastructure projects to solve that problem on a local and national level."
@@ -276,9 +276,9 @@ FRA_dedication_desc:0 "The worker has to realise that he is working for the grea
 FRA_fac_towns:0 "Factory Towns"
 FRA_fac_towns_desc:0 "Our plan to rapidly expand the Commune's industrial base can be supported by the establishment of new factory towns, cities specially designed to provide housing and modern commodities to them and their families, while making sure they live close to their workplaces."
 FRA_Industrialisation:0 "Communal Industrialisation"
-FRA_Industrialisation_desc:0 "Jean Jérôme is the new economy minister of the Commune. A Jacobin, he is a proponent of Communal Industralisation. While our country has always been one of the modern economies of Europe, we cannot yet compare to the Ruhr Valley. Only by ambitious industrial base expansion can we hope to measure to Germany."
+FRA_Industrialisation_desc:0 "Jean Jérôme is the new economy minister of the Commune. A Jacobin, he is a proponent of Communal Industrialisation. While our country has always been one of the modern economies of Europe, we cannot yet compare to the Ruhr Valley. Only by ambitious industrial base expansion can we hope to measure to Germany."
 FRA_inter_coop:0 "International Cooperation"
-FRA_inter_coop_desc:0 "While our technical expertise is one of the best in the world, it is too easy to ignore any breakthroughs that are made in friendly countries on a false pretense of superiority. From new production techniques to management theories, we must stay observant and borrow anything that could benefit our own economy."
+FRA_inter_coop_desc:0 "While our technical expertise is one of the best in the world, it is too easy to ignore any breakthroughs that are made in friendly countries on a false pretence of superiority. From new production techniques to management theories, we must stay observant and borrow anything that could benefit our own economy."
 FRA_war_eco_agri: "War Economy and Agriculture"
 FRA_war_eco_agri_desc:0 "Jacques Doriot is the new economy minister of the Commune. A Sorelian, he is a proponent of his 'War, Economy and Agriculture' theory, calling for a rapid conversion to a war economy along with an ambitious development of the agriculture. Should the German reactionaries attack, we will certainly have a use for the rifles and the bread."
 FRA_modern_farms: "Modern Farms"
@@ -292,7 +292,7 @@ FRA_cooperatives_desc:0 "Daniel Guérin is the new economy minister of the Commu
 FRA_decentralized_industry: "Decentralised Industry"
 FRA_decentralized_industry_desc:0 "Our industry is currently concentrated around Paris and major communes, but the people don't live only in Paris, Lille or Lyon but everywhere in France. We must put all efforts into developing all the regions of France so that our entire country prospers."
 FRA_market_socialism: "Market Socialism"
-FRA_market_socialism_desc:0 "The cooperatives we created must insert themselves in a new, equal socialist market. This market will make the economy more dynamic and allow everyone to pursue their own goals and share their industrial wealth in the respect of the ideals of socialism, without the predatory behaviors of the capitalist market economy."
+FRA_market_socialism_desc:0 "The cooperatives we created must insert themselves in a new, equal socialist market. This market will make the economy more dynamic and allow everyone to pursue their own goals and share their industrial wealth in the respect of the ideals of socialism, without the predatory behaviours of the capitalist market economy."
 FRA_ruralism: "Ruralism"
 FRA_ruralism_desc:0 "The life of the peasant is the best life known to man, but the need for an industrial economy made this life impossible for most of the French people. We can, however, still encourage this lifestyle by bringing their factories and workplaces to the countryside, ending the tyranny of mass urbanisation."
 
@@ -309,7 +309,7 @@ FRA_tank_assembly_line_desc:0 "Tanks are a fearsome machine on the battlefield, 
 FRA_tank_quality_line:0 "Quality Production"
 FRA_tank_quality_line_desc:0 "Tanks are a fearsome machine on the battlefield, but they are a very complex machine to build. Regardless, if we prioritise quality, we ensure that our tanks are the best of the best. Thus, every tank we produce will easily crush the tin cans that our enemy desperately output to counter us."
 FRA_centralized_hc:0 "Centralised High Command"
-FRA_centralized_hc_desc:0 "We are aware that the unsavory events of 1919 have put a deep mistrust of military High Command in the people of the Commune. Regardless, we will need to rehabilitate the concept of the High Command. The idea of the squad leader deciding combat tactics is glamorous, but who will care for logistics and strategical maneuvers?"
+FRA_centralized_hc_desc:0 "We are aware that the unsavoury events of 1919 have put a deep mistrust of military High Command in the people of the Commune. Regardless, we will need to rehabilitate the concept of the High Command. The idea of the squad leader deciding combat tactics is glamorous, but who will care for logistics and strategical manoeuvres?"
 FRA_analysing_wki:0 "Analysing the Weltkrieg"
 FRA_analysing_wki_desc:0 "The Weltkrieg, a tragedy to us and our British comrades, is a painful topic to study, but it is one we must study regardless. From the successes and failures of this war, we will learn how the next must be fought. Those who think that new tactics and strategies will sprout out of nowhere as the conflict draws near are deluded."
 FRA_war_experience:0 "War Experience"
@@ -354,13 +354,13 @@ FRA_socialist_education_desc:0 "The education of the French Republic was in many
 FRA_Our_time_has_come:0 "Revanchist Propaganda"
 FRA_Our_time_has_come_desc:0 "Our desire of revenge against Germany has been long coming. 1871 saw us lose Alsace-Lorraine, and the Republican schools rightfully taught their children that it was a French region soon to be seized back. Sadly, 1919 saw our defeat and the loss of Nancy. But we are not done, our rightful anger shall only end when France is whole again!"
 FRA_department_revolutionary_ideals:0 "Department of Revolutionary Ideals"
-FRA_department_revolutionary_ideals_desc:0 "While the empirical teachings prove themselves easily, the virtues of the Commune are harder to communicate to our population. While omnious sounding, we must create an institution ready to help us remind to our people the value of the Revolution and prevent reactionary influences from implanting themselves."
+FRA_department_revolutionary_ideals_desc:0 "While the empirical teachings prove themselves easily, the virtues of the Commune are harder to communicate to our population. While ominous sounding, we must create an institution ready to help us remind to our people the value of the Revolution and prevent reactionary influences from implanting themselves."
 FRA_Blanqui_Research_Institute:0 "Blanqui Research Institute"
 FRA_Blanqui_Research_Institute_desc:0 "While some nations resist the teachings of science, France endorses them without nuance. Let's support the establishment of a new research institute aimed at furthering our technological superiority. Where reactionaries doubt every discovery and stand wary of change, we embrace them and become stronger every year!"
 FRA_military_buildup_three: "Further Military Development"
 FRA_military_buildup_three_desc:0 "Our economy is now well developed and the Commune is ready for war, but we can always do better. By encouraging further industrial projects, the Commune shall not only be ready for war but will indisputably be superior in every way to any of our enemies. We will prove to the world that the Commune will not be defeated!"
 FRA_military_science: "Military Science"
-FRA_military_science_desc:0 "France is always working on improving its research networks, but theorical sciences can only bring us so far. We will open a new wing in the Blanqui research institute dedicated to military science, allowing us to fund and develop new breakthroughs that will be immediately put to use by our army."
+FRA_military_science_desc:0 "France is always working on improving its research networks, but theoretical sciences can only bring us so far. We will open a new wing in the Blanqui research institute dedicated to military science, allowing us to fund and develop new breakthroughs that will be immediately put to use by our army."
 FRA_synthetic_refineries:0 "Synthetic Resources"
 FRA_synthetic_refineries_desc:0 "France is great and resourceful, but it does not have everything. Oil, rubber, tungsten and chromium all lack, and we may not always rely on foreign exporters when conflict comes. We must research news ways to acquire these resources from what we already have. Some scientists even suggest we may be able to engineer those resources."
 FRA_secret_weaponry:0 "Electric Machines"
@@ -411,7 +411,7 @@ FRA_help_csa_desc:0 "During the Second Congress was discussed the most pressing 
 FRA_scientific_cooperation:0 "International Scientific Cooperation"
 FRA_scientific_cooperation_desc:0 "It is clear that we cannot simply keep our own technological discoveries to ourselves. During a meeting at the old university of Cambridge, we decided to establish a worldwide plan to combine the technological advances of Socialist countries. Some however, call for a more ambitious plan, including industrial investment."
 FRA_third_inter_congress:0 "The Third Internationale Congress"
-FRA_third_inter_congress_desc:0 "The responsability of holding the Third Congress has once again fallen back to us, with the new site chosen for the task being the Palace Populaire, where the Louvre once stood full of the plunders of the French Empire. Fittingly, one of the topics at hand concerns finally liberating the African continent."
+FRA_third_inter_congress_desc:0 "The responsibility of holding the Third Congress has once again fallen back to us, with the new site chosen for the task being the Palace Populaire, where the Louvre once stood full of the plunders of the French Empire. Fittingly, one of the topics at hand concerns finally liberating the African continent."
 FRA_african_liberation:0 "African Liberation"
 FRA_african_liberation_desc:0 "Africa has long suffered under tyranny and oppression. The oppression of its many kings, the oppression of slave traders and missionaries, and finally the oppression of European colonists and explorers. Finally, we give freedom to Africa, and hope that one day we can right the wrongs done to them."
 
@@ -422,11 +422,11 @@ FRA_amateur_pilots_desc:0 "No-one is born a pilot, and while some study to excel
 FRA_st_exp_doctrine:0 "St-Exupéry Doctrine"
 FRA_st_exp_doctrine_desc:0 "Antoine de Saint-Exupéry is a brilliant aviator, and he has much to teach us about this new, strange world of air warfare. While his words are no gospel, we heavily value his unique experience and aim to make his teachings the frame of future air doctrine. A start, certainly."
 FRA_ecole_air:0 "Ecole de l'Air"
-FRA_ecole_air_desc:0 "As our air doctrine rapidly expands and air fights go from disorganised brawls to carefully crafted engagements, we desperately begin to need trained pilots and trained officers who can planify air campaigns as they planify land or naval campaigns. Only our wits will work in this brand new field of warfare, and luckily we have some."
+FRA_ecole_air_desc:0 "As our air doctrine rapidly expands and air fights go from disorganised brawls to carefully crafted engagements, we desperately begin to need trained pilots and trained officers who can plan air campaigns as they plan land or naval campaigns. Only our wits will work in this brand new field of warfare, and luckily we have some."
 FRA_air_bases:0 "Establish More Air Bases"
 FRA_air_bases_desc:0 "Planes require air bases to land, refuel, rearm, repair and take off, much like navies. But unlike navies, they cannot stay airborne for months, only hours. As such, we must ensure our air base coverage is excellent, and we must make sure we are always under capacity so that our airforce is never crippled by lacking infrastructure."
 FRA_fighters:0 "Fighter Focus"
-FRA_fighters_desc:0 "The air is a new, vast angle of attack for our enemies, and as such it is a new angle of defense for us. Unlike on land, there are no forts, no cover, just one-on-one dogfights. If we invest in fighter production, we ensure no-one will freely navigate our air. Our fighters will always be upon them and ready to bring them back to the ground."
+FRA_fighters_desc:0 "The air is a new, vast angle of attack for our enemies, and as such it is a new angle of defence for us. Unlike on land, there are no forts, no cover, just one-on-one dogfights. If we invest in fighter production, we ensure no-one will freely navigate our air. Our fighters will always be upon them and ready to bring them back to the ground."
 FRA_bombers:0 "Bomber Focus"
 FRA_bombers_desc:0 "The air is a new, vast angle of attack for us, and it is one our enemies might not defend adequately against yet. Bombs present a single yet elegant way of transporting ordnance from the hangar to the target. We must invest in bombers to ensure that our enemies are assaulted from all sides, an advantage we cannot ignore."
 FRA_strat_bombers:0 "Strategic Destruction Focus"
@@ -437,7 +437,7 @@ FRA_rocket_development:0 "Rocketry Effort"
 FRA_rocket_development_desc:0 "The rocket engine is the pinnacle of our research in new propulsion methods for aircraft. While the path to creating rocket craft might still be long and arduous, our scientists propose a simpler use for rockets. By strapping an explosive charge and flinging them at the enemy, we can bomb them from afar. Simple, devastating."
 
 FRA_navy_focus:0 "Naval Reorganisation Program"
-FRA_navy_focus_desc:0 "While we currently have an acceptable navy, it is quite desorganised, preventing us from expanding it any further. We must integrate our naval forces back into the hierarchy of the Communal Forces. Just because we do not have a grand navy yet, does not mean we do not have a navy."
+FRA_navy_focus_desc:0 "While we currently have an acceptable navy, it is quite disorganised, preventing us from expanding it any further. We must integrate our naval forces back into the hierarchy of the Communal Forces. Just because we do not have a grand navy yet, does not mean we do not have a navy."
 FRA_arsenaux_back_on:0 "Put the Arsenaux Back On"
 FRA_arsenaux_back_on_desc:0 "The naval dockyards have for long been silent, abandoned in favour of military factories and civilian needs. Today, we will reinvest into those old Arsenaux, staff them again, and fund them so that we might once again have a navy that compares with the one of the Republic."
 FRA_old_doctrine:0 "The Old Doctrine"
