Add proper localisation for an idea

--- a/localisation/KR_Commune_of_France_l_english.yml
+++ b/localisation/KR_Commune_of_France_l_english.yml
@@ -180,6 +180,8 @@ French_revanchism_desc:0 "We have long prepared ourselves for this inevitable wa
 Revolutionary_spirit:0 "Revolutionary Spirit"
 Revolutionary_spirit_desc:0 "The survival and prosperity of the Syndicalist world will only be ensured when the last reactionary bastion is terminated. We must stand ready to mobilise and shatter every reactionary government across the world. One day, the Internationale will extend across all seas and continents!"
 
+FRA_socialist_education_idea:0 "Socialist Education"
+FRA_socialist_education_idea_desc:0 "The education of the youth is one of the greatest goals that a country like the Commune may face. Luckily, the old education system of the Republic was already revolutionary for its day, giving us a good basis for the new one. A socialist education system, focalised on the sciences and arts."
 
 ### Parties ###
 
