Finished partitions events, some fixes to annexations

--- a/localisation/KR_Annexations_l_english.yml
+++ b/localisation/KR_Annexations_l_english.yml
@@ -42,6 +42,7 @@ annex.15.a:0 "Long live Grossdeutschland!"
 annex.16.t:0 "Integration of Austria"
 annex.16.d:0 "We've controlled Austria for some time now, and it seems like the local population have finally accepted our rule."
 annex.16.a:0 "Hand it over to our Italian allies!"
+annex.16.b:0 "Release Italy!"
 annex.17.t:0 "The Annexation of Austrian Italy"
 annex.17.d:0 "We have taken control of the Austrian-occupied parts of Italy and we need to decide what do we do with it..."
 annex.17.a:0 "Return these lands to our Italian allies!"
@@ -520,7 +521,7 @@ annex.135.d:0 "After a campaign through the jungles and deserts of Bolivia, we h
 annex.135.a:0 "Liberate Bolivia under a friendly government!"
 annex.135.b:0 "Continue with military occupation!"
 annex.136.t:0 "The Fate of Peru"
-annex.136.d:0 "After a campaign across the hostile Peruvian Andes, we have finally managed to shatter the Peruvian defenses. Lima is now in our hands! We must now decide on the future of pERU"
+annex.136.d:0 "After a campaign across the hostile Peruvian Andes, we have finally managed to shatter the Peruvian defenses. Lima is now in our hands! We must now decide on the future of Peru"
 annex.136.a:0 "Liberate Peru under a friendly government!"
 annex.136.b:0 "Continue with military occupation!"
 annex.137.t:0 "The Fate of Ecuador"
