--- a/localisation/KR_Partitions_l_english.yml
+++ b/localisation/KR_Partitions_l_english.yml
@@ -432,9 +432,9 @@ part.97.b:0 "Western Flanders-Wallonia belongs to Flanders-Wallonia!"
 
 part.10.t:0 "The Fate of Britain"
 part.10.d:0 "After defeating the Union of Britain, we now control Great Britain. Many officials have called for the restoration of the United Kingdom, with its political future to be decided at a later time. The remaining minority has proposed that we consider a partition of the island. What shall we do?"
-part.10.a:0 "Let us consider a partition."
-part.10.b:0 "Create a loyal Britain."
-part.10.c:0 "Our loyal allies from Canada will return to Britain!"
+part.10.c:0 "Let us consider a partition."
+part.10.a:0 "Create a loyal Britain."
+part.10.b:0 "Our loyal allies from Canada will return to Britain!"
 part.10.e:0 "Total occupation of Great Britain!"
 
 ### World Tension ###
