--- a/localisation/KR_Countries_Cosmetic_l_english.yml
+++ b/localisation/KR_Countries_Cosmetic_l_english.yml
@@ -2010,6 +2010,37 @@ SIE_GER_subject:0 "Freistaat Sierra Leone"
 SIE_GER_subject_ADJ:0 "Sierra Leonean"
 SIE_GER_subject_DEF:0 "Freistaat Sierra Leone"
 
+CZE_czechoslavakia_authoritarian_democrat:0 "Kingdom of Czechoslovakia"
+CZE_czechoslavakia_authoritarian_democrat_ADJ:0 "Czechoslovakian"
+CZE_czechoslavakia_authoritarian_democrat_DEF:0 "The Kingdom of Czechoslovakia"
+CZE_czechoslavakia_market_liberal:0 "Czechoslovakia"
+CZE_czechoslavakia_market_liberal_ADJ:0 "Czechoslovakian"
+CZE_czechoslavakia_market_liberal_DEF:0 "Czechoslovakia"
+CZE_czechoslavakia_national_populist:0 "Czechoslovakia"
+CZE_czechoslavakia_national_populist_ADJ:0 "Czechoslovakian"
+CZE_czechoslavakia_national_populist_DEF:0 "Czechoslovakia"
+CZE_czechoslavakia_paternal_autocrat:0 "Kingdom of Czechoslovakia"
+CZE_czechoslavakia_paternal_autocrat_ADJ:0 "Czechoslovakian"
+CZE_czechoslavakia_paternal_autocrat_DEF:0 "The Kingdom of Czechoslovakia"
+CZE_czechoslavakia_radical_socialist:0 "Czechoslovakian Union"
+CZE_czechoslavakia_radical_socialist_ADJ:0 "Czechoslovakian"
+CZE_czechoslavakia_radical_socialist_DEF:0 "The Czechoslovakian Union"
+CZE_czechoslavakia_social_conservative:0 "Czechoslovakia"
+CZE_czechoslavakia_social_conservative_ADJ:0 "Czechoslovakian"
+CZE_czechoslavakia_social_conservative_DEF:0 "Czechoslovakia"
+CZE_czechoslavakia_social_democrat:0 "Czechoslovakia"
+CZE_czechoslavakia_social_democrat_ADJ:0 "Czechoslovakian"
+CZE_czechoslavakia_social_democrat_DEF:0 "Czechoslovakia"
+CZE_czechoslavakia_social_liberal:0 "Czechoslovakia"
+CZE_czechoslavakia_social_liberal_ADJ:0 "Czechoslovakian"
+CZE_czechoslavakia_social_liberal_DEF:0 "Czechoslovakia"
+CZE_czechoslavakia_syndicalist:0 "Czechoslovakian Union"
+CZE_czechoslavakia_syndicalist_ADJ:0 "Czechoslovakian"
+CZE_czechoslavakia_syndicalist_DEF:0 "The Czechoslovakian Union"
+CZE_czechoslavakia_totalist:0 "Czechoslovakian Union"
+CZE_czechoslavakia_totalist_ADJ:0 "Czechoslovakian"
+CZE_czechoslavakia_totalist_DEF:0 "The Czechoslovakian Union"
+
 ##############
 #Vanilla
 ##############
