Added focuses for Ireland to join Tech Sharing societies, a few other changes

--- a/localisation/KR_Ireland_l_english.yml
+++ b/localisation/KR_Ireland_l_english.yml
@@ -682,7 +682,7 @@ IRE_ENOUGHOFYOURPAST_desc:0 "When the Irish Tricolour flies atop London, all of 
 
 # Choosing Our Friends
 IRE_FRIENDS:0 "Choosing our Friends"
-IRE_FRIENDS_desc:0 "As tensions grow some cry out for the need of allies to protect Ireland and we stand at a crossroads on how to align. The aid of whom Patrick Pearse described as our "gallant allies in Europe" Germany proved critical in the War of Independence, while many Irishmen fought in the Weltkrieg on the side of the Entente. On the other hand, should Irishmen again be sent to die in a foreign war?"
+IRE_FRIENDS_desc:0 "As tensions grow some cry out for the need of allies to protect Ireland and we stand at a crossroads on how to align. The aid of whom the 1916 Proclamation described as our "gallant allies in Europe" Germany proved critical in the War of Independence, while many Irishmen fought in the Weltkrieg on the side of the Entente. On the other hand, should Irishmen again be sent to die in a foreign war?"
 
 IRE_KAISER:0 "The Kaiser"
 IRE_KAISER_desc:0 "It was the Germans who first recognised us and whose equipment and supplies allowed us to hold out against the vicious tactics of the British Army during the Irish War of Independence. Although Ireland is in many ways in the German sphere already we can now make it official."
@@ -690,6 +690,8 @@ IRE_ASKJOINME:0 "Our Gallant Allies in Europe"
 IRE_ASKJOINME_desc:0 "Germany is our natural ally, without whom we would still be under British rule. We owe it to them to aid them in their struggle."
 IRE_KAISERFRIEND:0 "A Pragmatic Friendship"
 IRE_KAISERFRIEND_desc:0 "While we are unwilling to go to war and risk Ireland's independence or the deaths of many young Irishmen, we could allow Germany to base their forces in Ireland in exchange for their protection."
+IRE_METECH:0 "Join the Kaiser Wilhelm Society"
+IRE_METECH_desc:0 "Germany is one of the world's leaders in science and technology, and have formed the Kaiser Wilhelm Society to coordinate research between their allies. Now that our relationship with our "gallant allies" has become an official alliance, their help shall greatly aid us in modernising our nation's forces."
 
 IRE_ALONE:0 "Neither King nor Kaiser"
 IRE_ALONE_desc:0 "'We serve neither King nor Kaiser' read the banner on Liberty Hall, and although we are grateful to the Germans for their help in securing our freedom we must maintain our neutrality."
@@ -704,6 +706,8 @@ IRE_CANPROTECT:0 "Protection - but nothing more"
 IRE_CANPROTECT_desc:0 "Although we are unwilling to join them in light of our history, we could offer them a base in Ireland from which they could retake Britain in exchange for their protection and recognition that we are a free people."
 IRE_JOINENTENTE:0 "Better the Devil You Know"
 IRE_JOINENTENTE_desc:0 "Although our past with the British might be bitter, with our independence secured we can move on and fight alongside them as an ally rather than an oppressed people or vassal against our common adversary and threat, the Union of Britain."
+IRE_ENTENTETECH:0 "Join the ISAC"
+IRE_ENTENTETECH_desc:0 "The Imperial Scientific and Academic Council is a society intended to coordinate research between the various member states of the British Empire. While we left the British Empire after the British Revolution, our renewed ties to Canada could persuade them to allow us entry."
 
 # Ancestral Ties
 IRE_AT:0 "Ancestral Ties"
@@ -743,6 +747,8 @@ IRE_REFUGEEFIGHT_desc:0 "Since arriving in Ireland, many refugees have had probl
 # France
 IRE_ALLYFRANCE:0 "Join the Internationale"
 IRE_ALLYFRANCE_desc:0 "Dring the French Revolutionary Wars, the French attempted to aid the Irish twice, once during the failed expedition to Ireland in 1796, and later landing troops during the 1798 Rebellion, liberating parts of Connacht before ultimately being defeated. Now that both the French and the Irish have embraced the revolution, shall we stand together once more against imperialist tyranny?"
+IRE_INTERNATIONALETECH:0 "Join the Phalanstère"
+IRE_INTERNATIONALETECH_desc:0 "The Phalanstère International was formed in Cambridge as a plan to aid Syndicalist regimes around the world through sharing of research and technology. Now that we too have overthrown capitalism and embraced the revolution, joining this society shall aid us in modernising our nation from the ashes of British imperialism and bourgeois nationalism."
 
 #Foreign Polcy
 ire.170.t:0 "Irish Diplomatic Mission to Britain"
