Some elections for Hawaii

--- a/localisation/KR_Hawaii_l_english.yml
+++ b/localisation/KR_Hawaii_l_english.yml
@@ -300,7 +300,7 @@ hawaii.31.t:0 "The Hawai'ian Revolution!"
 hawaii.31.d:0 "While the rich plantation owners, industrialists, nobility all gathered in Honolulu to discuss the future of Hawai'i they paid little heed to the poor toiling away on the plantations or in the factories. Following the lead of the CSA in America, a number of labour organises like Jack Hall have gone to the various plantations and factories and have lead an insurrection against the ruling elites. Fleeing from Honolulu as fast as they can, a new government was set up in the capital, a government truly for the people."
 hawaii.31.a:0 "Break the Chains!"
 hawaii.32.t:0 "Election of the Kuhina Nui"
-hawaii.32.d:0 "With the restoration of the kingdom of Hawai'i, it is time for an election of the Kuhina Nui or Prime minster. The Kuhina Nui is the head of government and will be directly elected by the people. Several parties are running for the first time, the Progressive Party, The National Liberal Party, The Reform Party and the National Party. "
+hawaii.32.d:0 "With the restoration of the kingdom of Hawai'i, it is time for an election of the Kuhina Nui or Prime minster. The Kuhina Nui is the head of government and will be directly elected by the people. Four parties have emerged to try and win the election the Progressive Party, The National Liberal Party, The Reform Party and the National Party. Of course whom would the voters choose?"
 hawaii.32.a:0 "The National Party Wins!"
 hawaii.32.b:0 "The Reform Party Wins!"
 hawaii.32.c:0 "The National Liberal Party Wins!"
@@ -311,7 +311,11 @@ hawaii.33.a:0 "The National Party Wins!"
 hawaii.33.b:0 "The Reform Party Wins!"
 hawaii.33.c:0 "The National Liberal Party Wins!"
 hawaii.33.e:0 "The Progressive Party Wins!"
-
+hawaii.34.t:0 "Election of General Secretary"
+hawaii.34.d:0 "While the revolution has implemented direct democracy on the different islands under our rule. However, there needs to be an election of the People's Council of Hawai'i that shall help guide the Hawaiian people particularly in foreign affairs. There are three large factions that have a chance at winning power, the social democrat Progressives, the Radical Socialist combined Syndicates of Hawai'i and the Syndicalist Pineapple workers Union."
+hawaii.34.a:0 "The Syndicalists Win"
+hawaii.34.b:0 "The Radical Socialist Win"
+hawaii.34.c:0 "The Progressives Win"
 hawaii.100.t:0 "Hawaii Requests Entry into the International"
 hawaii.100.d:0 "We have received a request from the Commune of Hawaii to join the International. A few years back this tiny land broke off from America and went through there own revolution. The strategic position of Hawaii makes them a valuable member for the International. However others were concerned about getting dragged into conflicts in that region."
 hawaii.100.a:0 "A welcome addition"
