Fengtian focus GFX

--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -271,8 +271,8 @@ FNG_The_Grand_Marshals_Proclamation:0 "The Grand Marshal's Proclamation"
 FNG_The_Grand_Marshals_Proclamation_desc:0 "The Grand Marshal will, in a grand proclamation, reassert the illegitimacy of the Qing Regime and its western support, and declare the end of an era of reconstruction and retrenchment. The new era, guided by the ideals set forward by the revolution, will be one of reconquest and national glory!"
 FNG_Begin_the_War_of_National_Reclamation:0 "Begin the War of National Reclamation"
 FNG_Begin_the_War_of_National_Reclamation_desc:0 "The moment has come, after so long spent growing our strength and biding our time, to declare the start of the War of National Reclamation! Ten thousand years to the Republic! Ten thousand years to the Grand Marshal! Onward for China!"
-FNG_Strike_Mongolia:0 "Strike Mongolia"
-FNG_Strike_Mongolia_desc:0 "In the closing months of the last civil war, the Mad Baron of Mongolia unjustly seized Chahar, our rightful land. We would endeavour to retake it, but von-Sternberg seems unlikely to fight a limited war, and our interests lie to the south. Perhaps we can find an opportune moment to strike."
+FNG_Retake_Chahar:0 "Retake Chahar"
+FNG_Retake_Chahar_desc:0 "In the closing months of the last civil war, the Mad Baron of Mongolia unjustly seized Chahar, our rightful land. We would endeavour to retake it, but von-Sternberg seems unlikely to fight a limited war, and our interests lie to the south. Perhaps we can find an opportune moment to strike."
 
 ### Events ###
 fengtian.6.t:0 "Japan seeks to negotiate"
